# commitsaga

./: .gitignore  CONTRIBUTOR_SCORING.md  PLAN.md  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/apps/ai/: client.py
backend/apps/analysis/: urls.py
backend/apps/repositories/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: celery.py  settings.py  urls.py  wsgi.py
docs/plan/: overview.md  phase-1-setup.md  phase-2-auth.md  phase-3-repository.md  phase-4-analysis.md  phase-5-display.md  phase-6-cron.md  phase-7-polish.md
frontend/: next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/repos/[id]/: layout.tsx  page.tsx
frontend/src/app/repos/[id]/contributors/: page.tsx
frontend/src/app/repos/[id]/export/: page.tsx
frontend/src/app/repos/[id]/issues/: page.tsx
frontend/src/app/repos/[id]/prs/: page.tsx
frontend/src/app/repos/[id]/timeline/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/ui/: animated-section.tsx  background.tsx  button.tsx  feature-card.tsx  glass-card.tsx  index.ts  markdown.tsx  navbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts  repositories.ts
frontend/src/types/: index.ts
